2019-06-24         Arnold D. Robbins     <arnold@skeeve.com>

	* makefile: Revise to take into account there is no more awktest.tar,
	add targets 'check' and 'test', and also 'testclean' to clean up
	after test run.  Have 'clean' and 'cleaner' depend upon 'testclean'.

2019-06-23         Arnold D. Robbins     <arnold@skeeve.com>

	* testdir: Extracted from awktest.tar and added to Git.
	* awktest.tar: Removed.

2019-06-06         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.1: Fix a typo, minor edits.

2019-06-05         Arnold D. Robbins     <arnold@skeeve.com>

	* b.c (relex): Count parentheses and treat umatched right paren
	as a literal character.
	* awktest.tar (testdir/T.re): Added a test case.
	* main.c (version): Upated.

2019-05-29         Arnold D. Robbins     <arnold@skeeve.com>

	* lib.c (isclvar): Remove check for additional '=' after
	first one. No longer needed.

2019-01-26         Arnold D. Robbins     <arnold@skeeve.com>

	* main.c (version): Updated.

2019-01-25         Arnold D. Robbins     <arnold@skeeve.com>

	* run.c (awkgetline): Check for numeric value in all getline
	variants. See the numeric-getline.* files in bugs-fixed directory.

2018-08-29         Arnold D. Robbins     <arnold@skeeve.com>

	* REGRESS: Check for existence of a.out. If not there, run
	make.  Enable core dumps for T.arnold system status test
	to work on MacOS X.

2018-08-22         Arnold D. Robbins     <arnold@skeeve.com>

	* awktest.tar (testdir/T.expr): Fix test for unary plus.

2018-08-22         Arnold D. Robbins     <arnold@skeeve.com>

	* REGRESS: Extract tests if necessary, set PATH to include '.'.
	* regdir/beebe.tar (Makefile): Fix longwrds test to prefix
	sort with LC_ALL=C.
	* awktest.tar: Updated from fixed test suite, directory
	it extracts is now called 'testdir' to match what's in top-level
	REGRESS script.
	* regdir: Removed, as Brian wants to keep the test suite in
	the tar file.

2018-08-22         Arnold D. Robbins     <arnold@skeeve.com>
